ibuilder/tests/not_compile/hidden_no_default.stderr
error: a default value is required for hidden fields
  --> $DIR/hidden_no_default.rs:10:5
   |
10 | /     #[ibuilder(hidden)]
11 | |     field: NonDefault,
   | |_____________________^
