ibuilder/tests/not_compile/hidden_no_default.rs
use ibuilder::*;

#[derive(IBuilder)]
struct NonDefault {
    field: String,
}

#[derive(IBuilder)]
struct Foo {
    #[ibuilder(hidden)]
    field: NonDefault,
}

fn main() {
    Foo::builder();
}
